--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="v1beta1_url">https://data.alpaca.markets/v1beta1/</string>
     <string name="v2_url">https://data.alpaca.markets/v2/</string>
+    <string name="paper_api_url">https://paper-api.alpaca.markets/</string>
 </resources>
