--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -2,4 +2,5 @@
     <string name="v1beta1_url">https://data.alpaca.markets/v1beta1/</string>
     <string name="v2_url">https://data.alpaca.markets/v2/</string>
     <string name="paper_api_url">https://paper-api.alpaca.markets/</string>
+    <string name="logos_url">https://static2.finnhub.io/file/publicdatany/finnhubimage/stock_logo/</string>
 </resources>
